HelloUltraviolet/Fixtures/RejectedSource/Procedures/ContractEntryCapability/Source/Main.uv
//! Rejected contract specimen for capability-requiring operations inside @entry.

public procedure contractEntryCapabilityReference(context: Context) -> bool
|: => @entry(context.io~>exists("HelloUltraviolet"))
{
    return true
}
